modifiche varie pre activity player 2 e single player

--- a/PetrisNetsGame/app/src/main/res/values/strings.xml
+++ b/PetrisNetsGame/app/src/main/res/values/strings.xml
@@ -5,4 +5,29 @@
     <string name="player_1">Giocatore 1</string>
     <string name="insert_names">Inserisci i nomi dei giocatori:</string>
     <string name="start">Avvia</string>
+    <string name="pause_1">Riprendi</string>
+    <string name="pause_2">Esci</string>
+    <string name="title_pause">PAUSA</string>
+    <string name="warning_message">Vuoi davvero uscire? I progressi della partita verranno persi.</string>
+    <string name="warning">Attenzione</string>
+    <string name="disabilitated_transition">Questa transizione non è abilitata!</string>
+    <string name="congratulations">Complimenti!</string>
+    <string name="popupText1">Hai concluso con un tempo di:</string>
+    <string name="popupText2">Ora è il turno del Giocatore 2.</string>
+    <string name="popupText3">Passa lo smartphone a:</string>
+    <string name="popupText4">Quando sei pronto, clicca INIZIA</string>
+    <string name="button_start">Inizia</string>
+    <string name="t1">T1</string>
+    <string name="t2">T2</string>
+    <string name="t3">T3</string>
+    <string name="t4">T4</string>
+    <string name="t5">T5</string>
+    <string name="t6">T6</string>
+    <string name="t7">T7</string>
+    <string name="t8">T8</string>
+    <string name="t9">T9</string>
+    <string name="onePlayer">1 Giocatore</string>
+    <string name="twoPlayers">2 Giocatori</string>
+    <string name="player2">Giocatore 2</string>
+    <string name="empty_warning">Il nome non può essere vuoto!</string>
 </resources>
